IF (NOT ENABLE_POSEESTIMATION)
	SET(ENABLE_POSEESTIMATION 0 CACHE BOOL "Enable the camera pose calibration module (using OpenCV)")
ENDIF()

IF (ENABLE_POSEESTIMATION)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_POSEESTIMATION=1 PARENT_SCOPE)

	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(POSECALIB_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(POSECALIB_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(POSECALIB_C_LIBS "")
	SET(POSECALIB_CXX_LIBS ${OPENCV3_LIBRARIES})

	SET(POSECALIB_C_SRC_FILES  modules/poseestimation/cameracalibration.c)
	SET(POSECALIB_CXX_SRC_FILES  modules/poseestimation/calibration.cpp  modules/poseestimation/calibration_wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${POSECALIB_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${POSECALIB_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${POSECALIB_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${POSECALIB_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${POSECALIB_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${POSECALIB_CXX_SRC_FILES} PARENT_SCOPE)
ENDIF()
