IF (NOT ENABLE_RECTANGULARTRACKER_DYNAMIC)
	SET(ENABLE_RECTANGULARTRACKER_DYNAMIC 0 CACHE BOOL "Enable the rectangulartracker activity filtering module")
ENDIF()

IF (ENABLE_RECTANGULARTRACKER_DYNAMIC)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_RECTANGULARTRACKER_DYNAMIC=1)

	FIND_PACKAGE(OpenCV REQUIRED core highgui imgproc opencv_imgcodecs)
	IF (OpenCV_FOUND)
		MESSAGE(STATUS "OpenCV FOUND - ${OpenCV_LIBRARIES} ${OpenCV_LIBRARY_DIRS}")
		SET(OPENCVD_INCDIRS ${OPENCVD_INCDIRS} ${OpenCV_INCLUDE_DIRS})
		SET(OPENCVD_LIBDIRS ${OPENCVD_LIBDIRS} ${OpenCV_LIBRARY_DIRS})
		SET(OPENCVD_C_LIBS ${OPENCVD_C_LIBS} ${OpenCV_LIBRARIES})
	ENDIF()
	
	SET(CALIB_C_SRC_FILES modules/rectangulartracker_dynamic/rectangulartracker_dynamic.c)
	SET(CAER_RT_FILES modules/rectangulartracker_dynamic/rectangulartracker_dynamic.c)
	SET(OPENCVD_C_SRC_FILES ${OPENCVD_C_SRC_FILES} modules/ractangulartracker_dynamic/rectangulartracker_dynamic.c)

	SET(OPENCVD_CXX_LIBS ${OPENCVD_CXX_LIBS} ${OPENCVD_C_LIBS})
	SET(OPENCVD_CXX_SRC_FILES ${OPENCVD_CXX_SRC_FILES} modules/rectangulartracker_dynamic/peopleCountingOpenCV.cpp modules/rectangulartracker_dynamic/wrapper.cpp)
	SET(CALIB_CXX_SRC_FILES modules/rectangulartracker_dynamic/peopleCountingOpenCV.cpp modules/rectangulartracker_dynamic/wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${OPENCVD_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${OPENCVD_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${OPENCVD_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${OPENCVD_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${OPENCVD_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${CALIB_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${OPENCVD_CXX_SRC_FILES} PARENT_SCOPE)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} PARENT_SCOPE)
ENDIF()


