IF (NOT ENABLE_STEREOCALIBRATION)
	SET(ENABLE_STEREOCALIBRATION 0 CACHE BOOL "Enable stereo camera calibration (using OpenCV)")
ENDIF()

IF (ENABLE_STEREOCALIBRATION)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_STEREOCALIBRATION=1 PARENT_SCOPE)

	PKG_CHECK_MODULES(ALLEGRO5_AUDIO REQUIRED)
	pkg_check_modules(ALLEGRO5_ACODEC REQUIRED)
	
	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(STEREOCALIBRATION_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(STEREOCALIBRATION_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(STEREOCALIBRATION_C_LIBS "-lallegro_audio -lallegro_acodec" )
	SET(STEREOCALIBRATION_CXX_LIBS ${OPENCV3_LIBRARIES} -lopencv_aruco)

	SET(STEREOCALIBRATION_C_SRC_FILES  modules/stereocalibration/stereocalibration.c)
	SET(STEREOCALIBRATION_CXX_SRC_FILES  modules/stereocalibration/calibration.cpp  modules/stereocalibration/calibration_wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${STEREOCALIBRATION_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${STEREOCALIBRATION_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${STEREOCALIBRATION_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${STEREOCALIBRATION_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${STEREOCALIBRATION_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${STEREOCALIBRATION_CXX_SRC_FILES} PARENT_SCOPE)
ENDIF()
