IF (NOT ENABLE_STEREOMATCHING)
	SET(ENABLE_STEREOMATCHING 0 CACHE BOOL "Enable stereo camera calibration (using OpenCV)")
ENDIF()

IF (ENABLE_STEREOMATCHING)
	SET(CAER_COMPILE_DEFINITIONS ${CAER_COMPILE_DEFINITIONS} -DENABLE_STEREOMATCHING=1 PARENT_SCOPE)

	# Require new OpenCV 3.1 at least.
	PKG_CHECK_MODULES(OPENCV3 REQUIRED opencv>=3.1)

	SET(STEREOMATCHING_INCDIRS ${OPENCV3_INCLUDE_DIRS})
	SET(STEREOMATCHING_LIBDIRS ${OPENCV3_LIBRARY_DIRS})

	SET(STEREOMATCHING_C_LIBS "-lallegro_audio -lallegro_acodec" )
	SET(STEREOMATCHING_CXX_LIBS ${OPENCV3_LIBRARIES} -lopencv_aruco)

	SET(STEREOMATCHING_C_SRC_FILES  modules/stereomatching/stereomatching.c)
	SET(STEREOMATCHING_CXX_SRC_FILES  modules/stereomatching/stereomatching.cpp  modules/stereomatching/stereomatching_wrapper.cpp)

	# Propagate to parent scope.
	SET(CAER_INCDIRS ${CAER_INCDIRS} ${STEREOMATCHING_INCDIRS} PARENT_SCOPE)
	SET(CAER_LIBDIRS ${CAER_LIBDIRS} ${STEREOMATCHING_LIBDIRS} PARENT_SCOPE)
	SET(CAER_C_LIBS ${CAER_C_LIBS} ${STEREOMATCHING_C_LIBS} PARENT_SCOPE)
	SET(CAER_C_SRC_FILES ${CAER_C_SRC_FILES} ${STEREOMATCHING_C_SRC_FILES} PARENT_SCOPE)
	SET(CAER_CXX_LIBS ${CAER_CXX_LIBS} ${STEREOMATCHING_CXX_LIBS} PARENT_SCOPE)
	SET(CAER_CXX_SRC_FILES ${CAER_CXX_SRC_FILES} ${STEREOMATCHING_CXX_SRC_FILES} PARENT_SCOPE)
ENDIF()
